--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prebuild": "rm -rf web && mkdir web",
+    "build": "tsc --build && ./node_modules/.bin/import-remap --from dist --to web --recursive",
+    "postbuild": "rm -rf dist"
   },
   "repository": {
     "type": "git",
@@ -26,6 +29,7 @@
   },
   "devDependencies": {
     "@types/hammerjs": "^2.0.41",
+    "@types/jquery": "^3.5.14",
     "import-remap": "^0.5.0"
   }
 }
