--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,10 +24,10 @@
 		"module": "esnext", /* Specify what module code is generated. */
 		"rootDir": "./", /* Specify the root folder within your source files. */
 		"moduleResolution": "node", /* Specify how TypeScript looks up a file from a given module specifier. */
-		// "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
+		"baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
 		"paths": {
 			"@module/*": [
-				"../lib/*"
+				"./lib/*"
 			]
 		}, /* Specify a set of entries that re-map imports to additional lookup locations. */
 		// "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
@@ -95,7 +95,6 @@
 		"skipLibCheck": true /* Skip type checking all .d.ts files. */
 	},
 	"include": [
-		"./src/**/*.ts",
 		"./lib/**/*.ts",
 	]
 }
