--- a/package.json
+++ b/package.json
@@ -24,12 +24,9 @@
   },
   "homepage": "https://github.com/magmacomputing/tempo#readme",
   "dependencies": {
-    "@js-temporal/polyfill": "^0.4.0",
-    "hammerjs": "^2.0.8"
+    "@js-temporal/polyfill": "^0.4.0"
   },
   "devDependencies": {
-    "@types/hammerjs": "^2.0.41",
-    "@types/jquery": "^3.5.14",
     "import-remap": "^0.5.0"
   }
 }
