--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
   },
   "homepage": "https://github.com/magmacomputing/tempo#readme",
   "dependencies": {
-    "@js-temporal/polyfill": "^0.4.0"
+    "@js-temporal/polyfill": "^0.4.1"
   },
   "devDependencies": {
+    "@types/node": "^17.0.25",
     "import-remap": "^0.5.0"
   }
 }
