--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "jest",
-    "prebuild": "rm -rf web/lib && mkdir web/lib",
+    "test": "vitest run",
+    "prebuild": "rm -rf web && mkdir web",
     "build": "tsc --build && ./node_modules/.bin/import-remap --from dist --to web --recursive",
     "postbuild": "rm -rf dist"
   },
@@ -19,14 +19,19 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/magmacomputing/tempo/issues"
   },
   "homepage": "https://github.com/magmacomputing/tempo#readme",
   "dependencies": {
-    "@js-temporal/polyfill": "^0.4.4"
+    "@js-temporal/polyfill": "^0.4.4",
+    "@vitest/ui": "^1.2.1"
   },
   "devDependencies": {
-    "import-remap": "^0.6.0"
+    "@types/jest": "^29.5.11",
+    "import-remap": "^0.6.0",
+    "vite-tsconfig-paths": "^4.3.1",
+    "vitest": "^1.2.1"
   }
 }
