--- a/package.json
+++ b/package.json
@@ -22,12 +22,11 @@
     "url": "https://github.com/magmacomputing/tempo/issues"
   },
   "homepage": "https://github.com/magmacomputing/tempo#readme",
-  "dependencies": {
-    "@js-temporal/polyfill": "^0.4.4",
-    "@vitest/ui": "^1.3.1"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "@js-temporal/polyfill": "^0.4.4",
     "@types/jest": "^29.5.12",
+    "@vitest/ui": "^1.3.1",
     "vite-tsconfig-paths": "^4.3.1",
     "vitest": "^1.3.1"
   }
