--- a/tsconfig.json
+++ b/tsconfig.json
@@ -94,10 +94,10 @@
 		// "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
 		"skipLibCheck": true /* Skip type checking all .d.ts files. */
 	},
-	"include": [
-		"./lib/**/*.ts",
-	],
+	// "include": [
+	// 	"./lib/**/*.ts",
+	// ],
 	"exclude": [
-		"node_modules",
+		"**/tests/*.test.ts",
 	]
 }
