--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
   },
   "homepage": "https://github.com/magmacomputing/tempo#readme",
   "devDependencies": {
-    "@js-temporal/polyfill": "^0.4.4",
     "@types/jest": "^29.5.12",
     "@vitest/ui": "^1.6.0",
+    "temporal-polyfill": "^0.2.4",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.6.0"
   }
