--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   "devDependencies": {
     "@types/jest": "^29.5.13",
     "@vitest/ui": "^2.1.2",
-    "temporal-polyfill": "^0.2.5",
     "vite-tsconfig-paths": "^5.0.1",
     "vitest": "^2.1.2"
+  },
+  "dependencies": {
+    "@js-temporal/polyfill": "^0.4.4"
   }
 }
