--- a/package.json
+++ b/package.json
@@ -23,12 +23,10 @@
   },
   "homepage": "https://github.com/magmacomputing/tempo#readme",
   "devDependencies": {
+    "@js-temporal/polyfill": "^0.4.4",
     "@types/jest": "^29.5.13",
     "@vitest/ui": "^2.1.3",
     "vite-tsconfig-paths": "^5.0.1",
     "vitest": "^2.1.3"
-  },
-  "dependencies": {
-    "@js-temporal/polyfill": "^0.4.4"
   }
 }
