--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "name": "tempo",
-  "version": "1.0.0",
+  "version": "0.5.0",
   "description": "A Wrapper around the Javascript Temporal object",
-  "main": "index.js",
+  "main": "dist/tempo.class.js",
+  "types": "dist/tempo.class.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/tempo.class.js",
+      "types": "./dist/tempo.class.d.ts"
+    }
+  },
   "directories": {
     "lib": "lib"
   },
@@ -10,6 +17,9 @@
     "test": "vitest run",
     "build": "tsc --build"
   },
+  "files": [
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/magmacomputing/tempo.git"
@@ -26,7 +36,7 @@
     "@js-temporal/polyfill": "^0.5.1",
     "@types/jest": "^30.0.0",
     "@vitest/ui": "^4.0.18",
-    "vite-tsconfig-paths": "^6.0.5",
+    "vite-tsconfig-paths": "^6.1.0",
     "vitest": "^4.0.18"
   }
 }
