--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@js-temporal/polyfill": "^0.5.1",
     "@types/jest": "^30.0.0",
     "@vitest/ui": "^4.0.18",
+    "tsc-alias": "^1.8.16",
     "vite-tsconfig-paths": "^6.1.0",
     "vitest": "^4.0.18"
   }
