--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,9 +24,9 @@
 		// "noLib": true,                                    /* Disable including any library files, including the default lib.d.ts. */
 		// "useDefineForClassFields": true,                  /* Emit ECMAScript-standard-compliant class fields. */
 		/* Modules */
-		"module": "esnext", /* Specify what module code is generated. */
+		"module": "NodeNext", /* Specify what module code is generated. */
 		"rootDir": "./lib", /* Specify the root folder within your source files. */
-		"moduleResolution": "node", /* Specify how TypeScript looks up a file from a given module specifier. */
+		"moduleResolution": "NodeNext", /* Specify how TypeScript looks up a file from a given module specifier. */
 		"baseUrl": "./", /* Specify the base directory to resolve non-relative module names. */
 		"paths": {
 			"#core/shared/*": [
