--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
 		// "useDefineForClassFields": true,                  /* Emit ECMAScript-standard-compliant class fields. */
 		/* Modules */
 		"module": "NodeNext", /* Specify what module code is generated. */
-		"rootDir": "./lib", /* Specify the root folder within your source files. */
+		"rootDir": "./", /* Specify the root folder within your source files. */
 		"moduleResolution": "NodeNext", /* Specify how TypeScript looks up a file from a given module specifier. */
 		"baseUrl": "./", /* Specify the base directory to resolve non-relative module names. */
 		"paths": {
