--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
 		"target": "ESNext", /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
 		"lib": [
 			"ESNext",
+			"ESNext.Temporal",
 			"DOM"
 		], /* Specify a set of bundled library declaration files that describe the target runtime environment. */
 		// "jsx": "preserve",                                /* Specify what JSX code is generated. */
@@ -27,7 +28,7 @@
 		"module": "NodeNext", /* Specify what module code is generated. */
 		"rootDir": "./", /* Specify the root folder within your source files. */
 		"moduleResolution": "NodeNext", /* Specify how TypeScript looks up a file from a given module specifier. */
-		"baseUrl": "./", /* Specify the base directory to resolve non-relative module names. */
+		// "baseUrl": "./", /* Specify the base directory to resolve non-relative module names. */
 		"paths": {
 			"#core/shared/*": [
 				"./lib/*"
@@ -97,11 +98,11 @@
 		// "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
 		"skipLibCheck": true /* Skip type checking all .d.ts files. */
 	},
-	// "include": [
-	// 	"./lib/**/*.ts",
-	// ],
+	"include": [
+		"./lib/**/*.ts",
+	],
 	"exclude": [
 		"dist",
-		"**/test/*.test.ts",
+		"test",
 	]
 }
